# pbxml

./: CMakeLists.txt  main.cpp
cpp/: xml_format.cc  xml_format.h
test/proto/: addressbook.proto
